--- a/Cinema.API/appsettings.json
+++ b/Cinema.API/appsettings.json
@@ -1,6 +1,9 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=cinemadb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
-    "LogLevel": {
+    "LogLevel": { 
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
