--- a/Cinema.DAL/Cinema.DAL.csproj
+++ b/Cinema.DAL/Cinema.DAL.csproj
@@ -17,4 +17,9 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Enums" />
+      <Folder Include="Repositories" />
+    </ItemGroup>
+
 </Project>
