--- a/Cinema.DAL/Cinema.DAL.csproj
+++ b/Cinema.DAL/Cinema.DAL.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
         <PrivateAssets>all</PrivateAssets>
@@ -15,11 +16,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Enums" />
-      <Folder Include="Repositories" />
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
     </ItemGroup>
 
 </Project>
