--- a/Cinema.ServiceLayer/Cinema.ServiceLayer.csproj
+++ b/Cinema.ServiceLayer/Cinema.ServiceLayer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>Cinema.Services</RootNamespace>
     </PropertyGroup>
 
@@ -13,6 +13,7 @@
       <PackageReference Include="Serilog" Version="2.10.1-dev-01285" />
       <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0-dev-00839" />
       <PackageReference Include="Serilog.Sinks.File" Version="5.0.0-dev-00909" />
+      <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     </ItemGroup>
 
 </Project>
