Try to make image upload

--- a/Cinema.API/Cinema.API.csproj
+++ b/Cinema.API/Cinema.API.csproj
@@ -34,5 +34,9 @@
     <ProjectReference Include="..\Cinema.DAL\Cinema.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\FilmPosters" />
+  </ItemGroup>
+
 
 </Project>
